# confinery

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/workflows/: ci.yml  release.yml
crates/confinery/: Cargo.toml
crates/confinery-cli/: Cargo.toml
crates/confinery-cli/src/: cli.rs  main.rs
crates/confinery-cli/tests/: cli.rs
crates/confinery-core/: Cargo.toml
crates/confinery-core/fuzz/: Cargo.toml
crates/confinery-core/fuzz/fuzz_targets/: profile_json.rs  profile_toml.rs  units.rs
crates/confinery-core/src/: audit.rs  capabilities.rs  env.rs  error.rs  filesystem.rs  lib.rs  logging.rs  network.rs  policy.rs  profile.rs  resources.rs  syscalls.rs  units.rs  windows.rs
crates/confinery-sandbox/: Cargo.toml
crates/confinery-sandbox/src/: common.rs  detect.rs  error.rs  lib.rs  report.rs  spec.rs  unsupported.rs
crates/confinery-sandbox/src/linux/: caps.rs  cgroups.rs  connect_filter.rs  landlock.rs  mod.rs  mounts.rs  namespaces.rs  rlimits.rs  seccomp.rs  syscall_table.rs
crates/confinery-sandbox/src/windows/: mod.rs  wslc.rs
crates/confinery/src/: main.rs  templates.rs
crates/confinery/src/commands/: doctor.rs  init.rs  mod.rs  profile.rs  run.rs
crates/confinery/templates/: assistant.toml  dev.toml
docs/: architecture.md  platform-support.md  profiles.md  security-model.md
profiles/: assistant.toml  strict.toml
