[workspace]
resolver = "2"
members = ["crates/confinery-core", "crates/confinery-sandbox", "crates/confinery"]

[workspace.package]
version = "0.1.1"
edition = "2021"
rust-version = "1.82"
license = "Apache-2.0"
repository = "https://github.com/confinery/confinery"
homepage = "https://github.com/confinery/confinery"
readme = "README.md"
authors = ["Confinery contributors"]
description = "Securely sandbox (confinery) AI assistants with layered OS isolation"
keywords = ["sandbox", "security", "seccomp", "landlock", "isolation"]
categories = ["command-line-utilities", "os"]

[workspace.dependencies]
confinery-core = { path = "crates/confinery-core", version = "0.1.1" }
confinery-sandbox = { path = "crates/confinery-sandbox", version = "0.1.1" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
time = { version = "0.3", features = ["formatting", "macros"] }
clap = { version = "4", features = ["derive", "env"] }

# Linux isolation primitives
nix = { version = "0.29", features = ["user", "mount", "sched", "process", "fs", "resource", "hostname", "signal", "socket", "uio"] }
libc = "0.2"
seccompiler = "0.4"
landlock = "0.4"
caps = "0.5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
