[package]
name = "confinery-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Confinery command-line interface"

[[bin]]
name = "confinery"
path = "src/main.rs"

[dependencies]
confinery-core.workspace = true
confinery-sandbox.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
