[package]
name = "confinery-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Core profile, policy, and audit model for the Confinery sandbox"

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
time.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
