[package]
name = "confinery-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Platform sandbox engine for Confinery: namespaces, seccomp, Landlock, Job Objects"

[dependencies]
confinery-core.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
nix.workspace = true
libc.workspace = true
seccompiler.workspace = true
landlock.workspace = true
caps.workspace = true
syscalls = { version = "0.6", default-features = false }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_System_Diagnostics_Debug",
] }

[dev-dependencies]
tempfile = "3"
